RESOLVED FIXED141112
REGRESSION (r177689): Emoji variation sequences rendered incorrectly (as characters from other non-emoji font)
https://bugs.webkit.org/show_bug.cgi?id=141112
Summary REGRESSION (r177689): Emoji variation sequences rendered incorrectly (as char...
mitz
Reported 2015-01-31 00:50:31 PST
<rdar://problem/19656263> For example, ♥️ (BLACK HEART SUIT + VS16) looks like “î G”. This was caused by a mistake in <http://trac.webkit.org/r177689>, the fix for bug 138683: in ComplexTextController::collectComplexTextRunsForCharacters(), the test if (CFEqual(cgFont.get(), runCGFont.get())) was replaced with a tautology if (CFEqual(runFontEqualityObject.get(), runFontEqualityObject.get())) This is easy to fix by removing the (re)definition of runFontEqualityObject inside the for loop and checking if (CFEqual(runFont->platformData().objectForEqualityCheck().get(), runFontEqualityObject.get()))
Attachments
Patch (4.11 KB, patch)
2015-01-31 16:46 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2015-01-31 14:31:36 PST
Whoops :(
Myles C. Maxfield
Comment 2 2015-01-31 16:46:20 PST
WebKit Commit Bot
Comment 3 2015-01-31 20:17:56 PST
Comment on attachment 245806 [details] Patch Clearing flags on attachment: 245806 Committed r179459: <http://trac.webkit.org/changeset/179459>
WebKit Commit Bot
Comment 4 2015-01-31 20:17:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.