REGRESSION (r177689): Emoji variation sequences rendered incorrectly (as characters from other non-emoji font) https://bugs.webkit.org/show_bug.cgi?id=141112

Patch by Myles C. Maxfield <litherum@gmail.com> on 2015-01-31
Reviewed by Sam Weinig.

Source/WebCore:

Typo in r177689.

Test: platform/mac/fast/text/combining-mark-paint.html

* platform/graphics/mac/ComplexTextControllerCoreText.mm:
(WebCore::ComplexTextController::collectComplexTextRunsForCharacters):

LayoutTests:

* platform/mac/fast/text/combining-mark-paint-expected.html: Added.
* platform/mac/fast/text/combining-mark-paint.html: Added.

Canonical link: https://commits.webkit.org/159136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179459 268f45cc-cd09-0410-ab3c-d52691b4dbfc